Fix tests and resolve CPD duplications
- Remove unused overloaded methods (evaluateConditionBoolean, handleArithmetic, handleEqualityComparison, handleIfExpression)
- Refactor handleLetDeclaration and handleEqualityComparison to use flatMap and reduce code duplication
- Simplify evaluateAssignmentRHS using flatMap
- All tests pass and CPD violations resolved