@@ -6,11 +6,12 @@ import magma.Result.Tuple;
 
 import java.math.BigInteger;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.BiPredicate;
-import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 /**
@@ -20,6 +21,44 @@ import java.util.regex.Pattern;
  * `interpret`.
  */
 public class App {
+	private record VarEntry(BigInteger value, Optional<String> resolvedType) {
+	}
+
+	private static Result<Tuple<Integer, Optional<String>>, String> parseDeclaredType(String stmt, int idx) {
+		if (idx < stmt.length() && stmt.charAt(idx) == ':') {
+			idx++;
+			idx = skipWhitespace(stmt, idx, stmt.length());
+			if (idx >= stmt.length()) {
+				return new Err<Tuple<Integer, Optional<String>>, String>("invalid declaration");
+			}
+			var typeStart = idx;
+			if (stmt.charAt(idx) != 'U' && stmt.charAt(idx) != 'I') {
+				return new Err<Tuple<Integer, Optional<String>>, String>("invalid type");
+			}
+			idx++;
+			while (idx < stmt.length() && Character.isDigit(stmt.charAt(idx))) {
+				idx++;
+			}
+			var typeStr = stmt.substring(typeStart, idx).trim();
+			if (!SUPPORTED_TYPES.contains(typeStr)) {
+				return new Err<Tuple<Integer, Optional<String>>, String>("unsupported type");
+			}
+			idx = skipWhitespace(stmt, idx, stmt.length());
+			return new Ok<Tuple<Integer, Optional<String>>, String>(new Tuple<>(idx, Optional.of(typeStr)));
+		}
+		return new Ok<Tuple<Integer, Optional<String>>, String>(new Tuple<>(idx, Optional.empty()));
+	}
+
+	private static Result<Tuple<BigInteger, Optional<String>>, String> evaluateAssignmentRHS(String rhs,
+			Map<String, VarEntry> ctx) {
+		var parsed = parseArithmeticSequence(rhs, ctx);
+		if (parsed.isEmpty()) {
+			return new Err<Tuple<BigInteger, Optional<String>>, String>("invalid assignment");
+		}
+		return parsed.get().flatMap(seq -> evaluateSequence(seq.values(), seq.operators())
+				.map(value -> new Tuple<>(value, seq.resolvedType())));
+	}
+
 	private record ArithmeticSequence(List<BigInteger> values, List<Character> operators,
 			Optional<String> resolvedType) {
 	}
@@ -29,6 +68,7 @@ public class App {
 
 	private static final Set<String> SUPPORTED_TYPES = Set.of("U6", "U8", "U32", "U64", "I8", "I16", "I32", "I64");
 	private static final Pattern OPERAND_PATTERN = Pattern.compile("^\\s*([+-]?\\d+)(?:([UI])(\\d+))?\\s*");
+	private static final Pattern IDENT_PATTERN = Pattern.compile("^\\s*([a-zA-Z_][a-zA-Z0-9_]*)\\s*");
 	private static final Pattern LEADING_NUMBER_PATTERN = Pattern.compile("^(-?)(\\d+)(?:([UI])(\\d+))?");
 
 	/**
@@ -38,11 +78,64 @@ public class App {
 	 * @return the leading decimal digit sequence, or empty string when none exist
 	 */
 	public static Result<String, String> interpret(String input) {
-		var arithmeticRes = handleArithmetic(input);
-		if (arithmeticRes.isPresent()) {
-			return arithmeticRes.get();
-		}
+		var ctx = new HashMap<String, VarEntry>();
+		return interpretWithContext(input, ctx);
+	}
 
+	private static Result<String, String> interpretWithContext(String input, Map<String, VarEntry> ctx) {
+		var statements = splitTopLevelStatements(input);
+		Optional<Result<String, String>> lastOk = Optional.empty();
+		for (var stmt : statements) {
+			var trimmed = stmt.trim();
+			if (trimmed.isEmpty()) {
+				continue;
+			}
+			if (trimmed.startsWith("let") && (trimmed.length() == 3 || Character.isWhitespace(trimmed.charAt(3)))) {
+				var res = handleLetDeclaration(trimmed, ctx);
+				if (res instanceof Err<String, String>(var error)) {
+					return new Err<String, String>(error);
+				}
+				continue;
+			}
+			var arithmeticRes = handleArithmetic(trimmed, ctx);
+			if (arithmeticRes.isPresent()) {
+				var r = arithmeticRes.get();
+				if (r instanceof Err<String, String>(var error)) {
+					return new Err<String, String>(error);
+				}
+				lastOk = Optional.of(r);
+				continue;
+			}
+
+			// boolean or literal or leading number logic for a single expression
+			var singleRes = handleSingleExpression(trimmed, ctx);
+			if (singleRes instanceof Err<String, String>(var error)) {
+				return new Err<String, String>(error);
+			}
+			lastOk = Optional.of(singleRes);
+		}
+		if (lastOk.isPresent()) {
+			return lastOk.get();
+		}
+		return new Ok<String, String>("");
+	}
+
+	private static List<String> splitTopLevelStatements(String input) {
+		var list = new ArrayList<String>();
+		var start = 0;
+		while (start < input.length()) {
+			var semi = findTopLevel(input, start, (s, i) -> s.charAt(i) == ';');
+			if (semi == -1) {
+				list.add(input.substring(start));
+				break;
+			}
+			list.add(input.substring(start, semi));
+			start = semi + 1;
+		}
+		return list;
+	}
+
+	private static Result<String, String> handleSingleExpression(String input, Map<String, VarEntry> ctx) {
 		var trimmed = input.trim();
 		if ("true".equals(trimmed) || "false".equals(trimmed)) {
 			return new Ok<String, String>(trimmed);
@@ -110,11 +203,7 @@ public class App {
 	}
 
 	private static Result<String, String> enforceResultBound(BigInteger sum, String typeFull) {
-		var boundCheck = enforceNumericBound(sum, typeFull);
-		if (boundCheck instanceof Err<BigInteger, String>(var error)) {
-			return new Err<String, String>(error);
-		}
-		return new Ok<String, String>(sum.toString());
+		return enforceNumericBound(sum, typeFull).map(BigInteger::toString);
 	}
 
 	private static int skipWhitespace(String input, int cursor, int length) {
@@ -132,7 +221,7 @@ public class App {
 		return findTopLevel(input, 0, (s, i) -> s.charAt(i) == '=' && i + 1 < s.length() && s.charAt(i + 1) == '=');
 	}
 
-	private static Optional<Result<String, String>> handleEqualityComparison(String input) {
+	private static Optional<Result<String, String>> handleEqualityComparison(String input, Map<String, VarEntry> ctx) {
 		var eqIndex = findTopLevelEquality(input);
 		if (eqIndex < 0) {
 			return Optional.empty();
@@ -144,39 +233,30 @@ public class App {
 			return Optional.of(new Ok<String, String>(Boolean.toString(left.equals(right))));
 		}
 		// numeric equality: parse both sides as arithmetic sequences
-		var leftParsed = parseArithmeticSequence(left);
-		var rightParsed = parseArithmeticSequence(right);
+		var leftParsed = parseArithmeticSequence(left, ctx);
+		var rightParsed = parseArithmeticSequence(right, ctx);
 		if (leftParsed.isEmpty() || rightParsed.isEmpty()) {
 			return Optional.empty();
 		}
 		var leftRes = leftParsed.get();
 		var rightRes = rightParsed.get();
-		var combined = leftRes.and(() -> rightRes);
-		if (combined instanceof Err<Tuple<ArithmeticSequence, ArithmeticSequence>, String>(var error)) {
-			return Optional.of(new Err<String, String>(error));
-		}
-		var pair = ((Ok<Tuple<ArithmeticSequence, ArithmeticSequence>, String>) combined).value();
-		var lSeq = pair.first();
-		var rSeq = pair.second();
-		var lEval = evaluateSequence(lSeq.values(), lSeq.operators());
-		var rEval = evaluateSequence(rSeq.values(), rSeq.operators());
-		if (lEval instanceof Err<BigInteger, String>(var error)) {
-			return Optional.of(new Err<String, String>(error));
-		}
-		if (rEval instanceof Err<BigInteger, String>(var error)) {
-			return Optional.of(new Err<String, String>(error));
-		}
-		var lVal = ((Ok<BigInteger, String>) lEval).value();
-		var rVal = ((Ok<BigInteger, String>) rEval).value();
-		// If both sides have resolved types, they must match
-		if (lSeq.resolvedType().isPresent() && rSeq.resolvedType().isPresent() &&
-				!lSeq.resolvedType().get().equals(rSeq.resolvedType().get())) {
-			return Optional.of(new Err<String, String>("operand types differ"));
-		}
-		return Optional.of(new Ok<String, String>(Boolean.toString(lVal.equals(rVal))));
+		return Optional.of(leftRes.and(() -> rightRes).flatMap(pair -> {
+			var lSeq = pair.first();
+			var rSeq = pair.second();
+			var lEval = evaluateSequence(lSeq.values(), lSeq.operators());
+			var rEval = evaluateSequence(rSeq.values(), rSeq.operators());
+			return lEval.flatMap(lVal -> rEval.flatMap(rVal -> {
+				// If both sides have resolved types, they must match
+				if (lSeq.resolvedType().isPresent() && rSeq.resolvedType().isPresent() &&
+						!lSeq.resolvedType().get().equals(rSeq.resolvedType().get())) {
+					return new Err<String, String>("operand types differ");
+				}
+				return new Ok<String, String>(Boolean.toString(lVal.equals(rVal)));
+			}));
+		}));
 	}
 
-	private static Optional<Result<String, String>> handleIfExpression(String input) {
+	private static Optional<Result<String, String>> handleIfExpression(String input, Map<String, VarEntry> ctx) {
 		var start = skipWhitespace(input, 0, input.length());
 		if (start >= input.length()) {
 			return Optional.empty();
@@ -200,16 +280,16 @@ public class App {
 		}
 		var thenExpr = input.substring(closing + 1, elseIndex).trim();
 		var elseExpr = input.substring(elseIndex + 4).trim();
-		var condEval = evaluateConditionBoolean(cond);
+		var condEval = evaluateConditionBoolean(cond, ctx);
 		if (condEval instanceof Err<Boolean, String>(var error)) {
 			return Optional.of(new Err<String, String>(error));
 		}
 		boolean condBool = ((Ok<Boolean, String>) condEval).value();
 		Result<String, String> chosenRes;
 		if (condBool) {
-			chosenRes = interpret(thenExpr);
+			chosenRes = interpretWithContext(thenExpr, ctx);
 		} else {
-			chosenRes = interpret(elseExpr);
+			chosenRes = interpretWithContext(elseExpr, ctx);
 		}
 		if (chosenRes instanceof Err<String, String>(var error)) {
 			return Optional.of(new Err<String, String>(error));
@@ -237,8 +317,8 @@ public class App {
 		return -1;
 	}
 
-	private static Result<Boolean, String> evaluateConditionBoolean(String cond) {
-		var condRes = interpret(cond);
+	private static Result<Boolean, String> evaluateConditionBoolean(String cond, Map<String, VarEntry> ctx) {
+		var condRes = interpretWithContext(cond, ctx);
 		if (condRes instanceof Err<String, String>(var error)) {
 			return new Err<Boolean, String>(error);
 		}
@@ -261,9 +341,9 @@ public class App {
 		return op == '+' || op == '-' || op == '*' || op == '/';
 	}
 
-	private static Optional<Result<ArithmeticSequence, String>> parseArithmeticSequence(String input) {
+	private static Optional<Result<ArithmeticSequence, String>> parseArithmeticSequence(String input,
+			Map<String, VarEntry> ctx) {
 		var length = input.length();
-		var matcher = OPERAND_PATTERN.matcher(input);
 		var cursor = 0;
 		List<BigInteger> values = new ArrayList<BigInteger>();
 		List<Character> operators = new ArrayList<Character>();
@@ -273,7 +353,9 @@ public class App {
 			if (cursor >= length) {
 				break;
 			}
-			var operandResult = parseOperandAt(input, cursor, matcher);
+
+
+			var operandResult = parseOperandAt(input, cursor, ctx);
 			if (operandResult instanceof Err<Optional<OperandResult>, String>(var error)) {
 				return Optional.of(new Err<ArithmeticSequence, String>(error));
 			}
@@ -309,7 +391,8 @@ public class App {
 		return Optional.of(new Ok<ArithmeticSequence, String>(new ArithmeticSequence(values, operators, resolvedType)));
 	}
 
-	private static Result<Optional<OperandResult>, String> parseOperandAt(String input, int cursor, Matcher matcher) {
+	    private static Result<Optional<OperandResult>, String> parseOperandAt(String input, int cursor,
+		    Map<String, VarEntry> ctx) {
 		var length = input.length();
 		var current = input.charAt(cursor);
 		if (current == '(') {
@@ -318,8 +401,24 @@ public class App {
 				return new Ok<Optional<OperandResult>, String>(Optional.empty());
 			}
 			var inner = input.substring(cursor + 1, closing);
-			return evaluateParenthesizedOperand(inner, closing);
+			return evaluateParenthesizedOperand(inner, closing, ctx);
 		}
+		// Try identifier first
+		var identMatcher = IDENT_PATTERN.matcher(input);
+		identMatcher.region(cursor, length);
+		if (identMatcher.lookingAt()) {
+			var name = identMatcher.group(1);
+			if ("true".equals(name) || "false".equals(name)) {
+				return new Ok<Optional<OperandResult>, String>(Optional.empty());
+			}
+			if (!ctx.containsKey(name)) {
+				return new Err<Optional<OperandResult>, String>("unknown variable");
+			}
+			var entry = ctx.get(name);
+			return new Ok<Optional<OperandResult>, String>(
+					Optional.of(new OperandResult(entry.value(), entry.resolvedType(), identMatcher.end())));
+		}
+		var matcher = OPERAND_PATTERN.matcher(input);
 		matcher.region(cursor, length);
 		if (!matcher.lookingAt()) {
 			return new Ok<Optional<OperandResult>, String>(Optional.empty());
@@ -333,17 +432,22 @@ public class App {
 				matcher.end())));
 	}
 
-	private static Result<Optional<OperandResult>, String> evaluateParenthesizedOperand(String inner, int closing) {
-		var innerSeq = parseArithmeticSequence(inner);
+	private static Result<Optional<OperandResult>, String> evaluateParenthesizedOperand(String inner, int closing,
+			Map<String, VarEntry> ctx) {
+		var innerSeq = parseArithmeticSequence(inner, ctx);
 		if (innerSeq.isEmpty()) {
 			return new Ok<Optional<OperandResult>, String>(Optional.empty());
 		}
+
 		return innerSeq.get().flatMap(sequence -> evaluateSequence(sequence.values(), sequence.operators())
 				.map(total -> Optional.of(new OperandResult(total, sequence.resolvedType(), closing + 1))));
 	}
 
 	private static Result<BigInteger, String> evaluateSequence(List<BigInteger> values, List<Character> operators) {
-		var result = values.getFirst();
+		if (values.isEmpty()) {
+			return new Err<BigInteger, String>("empty sequence");
+		}
+		var result = values.get(0);
 		for (var i = 1; i < values.size(); i++) {
 			char op = operators.get(i - 1);
 			var operand = values.get(i);
@@ -365,17 +469,17 @@ public class App {
 		return new Ok<BigInteger, String>(result);
 	}
 
-	private static Optional<Result<String, String>> handleArithmetic(String input) {
-		var ifRes = handleIfExpression(input);
+	private static Optional<Result<String, String>> handleArithmetic(String input, Map<String, VarEntry> ctx) {
+		var ifRes = handleIfExpression(input, ctx);
 		if (ifRes.isPresent()) {
 			return ifRes;
 		}
-		var equality = handleEqualityComparison(input);
+		var equality = handleEqualityComparison(input, ctx);
 		if (equality.isPresent()) {
 			return equality;
 		}
 
-		var parsed = parseArithmeticSequence(input);
+		var parsed = parseArithmeticSequence(input, ctx);
 		if (parsed.isEmpty()) {
 			return Optional.empty();
 		}
@@ -388,4 +492,63 @@ public class App {
 							return new Ok<String, String>(total.toString());
 						})));
 	}
+
+
+	private static Result<String, String> handleLetDeclaration(String stmt, Map<String, VarEntry> ctx) {
+		// stmt is expected like: let x : U8 = <expr>
+		var start = skipWhitespace(stmt, 3, stmt.length()); // skip 'let'
+		var parseIdRes = parseDeclarationIdentifier(stmt, start);
+		return parseIdRes.flatMap(idPair -> {
+			var idxAfterId = skipWhitespace(stmt, idPair.first(), stmt.length());
+			var name = idPair.second();
+			var declaredTypeRes = parseDeclaredType(stmt, idxAfterId);
+			return declaredTypeRes.flatMap(declaredPair -> {
+				Optional<String> declaredType = declaredPair.second();
+				// expect '=' at top-level
+				var assignIndex = findTopLevelAssign(stmt);
+				if (assignIndex < 0) {
+					return new Err<String, String>("invalid declaration");
+				}
+				var rhs = stmt.substring(assignIndex + 1).trim();
+				// evaluate RHS and return value + resolved type
+				var rhsEval = evaluateAssignmentRHS(rhs, ctx);
+				return rhsEval.flatMap(rhsPair -> {
+					var value = rhsPair.first();
+					var rhsResolvedType = rhsPair.second();
+					// bounds/type enforcement
+					if (declaredType.isPresent()) {
+						var boundCheck = enforceNumericBound(value, declaredType.get());
+						if (boundCheck instanceof Err<BigInteger, String>(var errVal)) {
+							return new Err<String, String>(errVal);
+						}
+						// If RHS had a resolved type and it doesn't match declared type, error
+						if (rhsResolvedType.isPresent() && !rhsResolvedType.get().equals(declaredType.get())) {
+							return new Err<String, String>("operand types differ");
+						}
+						ctx.put(name, new VarEntry(value, declaredType));
+						return new Ok<String, String>("");
+					}
+					// no declared type, use RHS resolved type if present
+					ctx.put(name, new VarEntry(value, rhsResolvedType));
+					return new Ok<String, String>("");
+				});
+			});
+		});
+	}
+
+	private static int findTopLevelAssign(String input) {
+		return findTopLevel(input, 0, (s, i) -> s.charAt(i) == '=' && !(i + 1 < s.length() && s.charAt(i + 1) == '='));
+	}
+
+	private static Result<Tuple<Integer, String>, String> parseDeclarationIdentifier(String stmt, int start) {
+		var m = IDENT_PATTERN.matcher(stmt);
+		m.region(start, stmt.length());
+		if (!m.lookingAt()) {
+			return new Err<Tuple<Integer, String>, String>("invalid declaration");
+		}
+
+        
+		return new Ok<Tuple<Integer, String>, String>(new Tuple<>(m.end(), m.group(1)));
+	}
+
 }
